fix contrast on navbar Relates #155

--- a/public/css/results.css
+++ b/public/css/results.css
@@ -1,6 +1,7 @@
 .message {
   text-align: center;
-  margin-bottom: 50px; }
+  margin-bottom: 50px;
+  padding: 0px 1rem; }
 
 .result-box {
   border: 1px solid green;
