--- a/public/sass/_variables.sass
+++ b/public/sass/_variables.sass
@@ -4,6 +4,6 @@ $global-font-color-black: rgb(34, 34, 34)
 $global-bg-color-whiteish: rgb(245, 243, 241)
 
 //COLORS
-$light-green: rgb(0, 180, 149)
+$light-green: #00A88C
 $dark-green: rgb(49, 83, 80)
 $pale-green: #dae4d5
